# DataPulse

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
benchmarks/: __init__.py  query_benchmark.py
docs/public/: api.md
src/datapulse/: __init__.py  config.py  models.py
src/datapulse/db/: __init__.py
src/datapulse/db/mysql/: 001_create_jobs.sql  002_create_file_manifests.sql  003_create_processing_tables.sql  __init__.py
src/datapulse/events/: __init__.py  s3_event.py
src/datapulse/handlers/: __init__.py  api_handler.py  ingestion_handler.py  job_handler.py  processing_handler.py
src/datapulse/pipeline/: __init__.py  parser.py  transformer.py  validator.py  writer.py
src/datapulse/queue/: __init__.py  base.py  memory.py
src/datapulse/storage/: __init__.py  base.py  dynamodb.py  mysql.py
tests/benchmarks/: test_query_benchmark.py
tests/db/: test_mysql_schema.py
tests/events/: test_s3_event.py
tests/fixtures/: orders_sample.csv  orders_with_bad_row.csv  s3_object_created_event.json
tests/handlers/: test_api_handler.py  test_ingestion_handler.py  test_processing_handler.py
tests/pipeline/: test_processing_pipeline.py
tests/queue/: test_in_memory_queue.py
tests/storage/: test_dynamodb_storage.py  test_mysql_manifest_storage.py  test_mysql_processing_storage.py  test_mysql_storage.py
tests/storage_contract/: test_storage_backend_contract.py
