[project]
name = "datapulse"
version = "0.1.0"
description = "Local foundation for a serverless event-driven data pipeline."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
